--- a/dune
+++ b/dune
@@ -59,7 +59,7 @@
    cmi_format persistent_env env type_immediacy errortrace
    typedtree printtyped ctype printtyp includeclass mtype envaux includecore
    tast_iterator tast_mapper signature_group cmt_format untypeast
-   includemod includemod_errorprinter
+   includemod includemod_modulediffer includemod_errorprinter
    typetexp patterns printpat parmatch stypes typeopt typedecl value_rec_check
    typecore
    typeclass typemod typedecl_variance typedecl_properties typedecl_immediacy
